2005-11-28 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* decided to use the Supported enum a bit more efficient in checks
	  ( doh, big deal :P )

2005-11-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* include/Win_GParted.h,
	  src/Win_GParted.cc: Added a menu 'Edit' which contains 'Undo' and
	  'Apply'. (#322550)

2005-11-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* configure.in: raised dependencies to >=gtkmm-2.6 and >=parted-1.6.25

2005-11-27 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* hmmz, lots of shimmery internals..
	  Instead of using a boolean to indicate support for certain
	  features i now use and enum (NONE, LIBPARTED, EXTENDED).
	  This allowed me to clean up some stuff that annoyed me ;)
	  Still.. the core could use a bit more love...

2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* include/Makefile.am,
	  include/Win_GParted.h,
	  src/Makefile.am: removed Dialog_About.[h,cc]
	* src/Win_GParted.cc: from now on we use Gtk::AboutDialog instead of
	  our own AboutDialog. Also use Gtk::Stock items instead of hardcoded
	  paths to images (about and harddisk).

2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* gparted-0.0.9

2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* gparted finally has a logo/icon ;) (thanks to Alain Clement)
	  see also #162092

2005-11-25 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* include/.cvsignore,
	  src/.cvsignore: added *.swp
	* Makefile.am,
	  include/Dialog_Filesystems.h: some modifications to pass 'make
	  distcheck'
	* src/GParted_Core.cc: minor cleanups
	
2005-11-24 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* include/FileSystem.h: cleanups
	* include/GParted_Core.h,
	  src/GParted_Core.cc: correct partitiontype is now set after creation
	  or conversion. (#322281)

2005-11-18 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* configure.in: added mk to ALL_LINGUAS on request of Arangel

2005-10-05 Bart Hakvoort <hakvoort@cvs.gnome.org>
	* removed INSTALL
	* compose/.cvsignore,
	   compose/Makefile.am,
	   Makefile.am,